@@ -2,6 +2,8 @@
 v6.3.0-git
 ----------
 
+[mms] Uniquely identify sent-mail mailboxes by identity in main folder tree
+      (Request #12721).
 [mms] Don't send empty text part if a message contains attachments.
 [mms] Add button to allow folder tree to be rebuilt in smartmobile view.
 [mms] Add option to poll mailbox for new mailbox when creating a mailbox
